# NLP_proj1

./: .gitignore  Proj0-Scratch.ipynb  WriteUp.docx  dataset.py  main.py  model.py  pyproject.toml  test.output_log_random.txt  utils.py  ~$riteUp.docx
.ipynb_checkpoints/: Proj0-Scratch-checkpoint.ipynb
test/: test_dataset.py  test_model.py
