[project]
name = "project-1"
version = "0.1.0"
description = "Brandeis CS231 Project 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "torch~=2.6.0 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "lab>=8.5",
]
